--- a/sourse/pug/blocks/modal/_modal.scss
+++ b/sourse/pug/blocks/modal/_modal.scss
@@ -237,16 +237,14 @@
 	width: 100%;
 	position: relative;
 
-	max-width: rem(720);
-	&.big{
-		max-width: 100%;
-	}
-
 	min-height: 100%;
 	@include media-breakpoint-up(md){
 		min-height:0;
 		height: auto;
-		//max-height: calc(100vh - #{rem(60)});
+		max-width: rem(720);
+	}
+	&.big{
+		max-width: 100%;
 	}
 
 	padding: var(--modal-py) var(--modal-px) !important;
@@ -318,9 +316,9 @@
 				}
 			}
 			&--all{
-				height: calc(100vh - var(--modal-py)*2 - var(--title-fs)*var(--title-lh) - var(--title-mb) - #{rem(60)} - var(--input-mb) - var(--title-mb) - #{rem(32)});
+				height: calc(100vh - var(--modal-py)*2 - var(--title-fs)*var(--title-lh) - var(--title-mb) - #{rem(60)} - var(--input-mb));
 				@include media-breakpoint-up(md){
-					height: calc(100vh - #{rem(100)} - var(--modal-py)*2 - var(--title-fs)*var(--title-lh) - var(--title-mb) - #{rem(60)} - var(--input-mb) - var(--title-mb) - #{rem(32)});
+					height: calc(100vh - #{rem(100)} - var(--modal-py)*2 - var(--title-fs)*var(--title-lh) - var(--title-mb) - #{rem(60)} - var(--input-mb));
 				}
 			}
 
