edit head style

--- a/sourse/pug/blocks/header/_header.scss
+++ b/sourse/pug/blocks/header/_header.scss
@@ -26,10 +26,10 @@
 	}
 } // end.header
 .topLine{
-	@include mt;
+	// @include mt;
 }
 .brands{
-	@include mt;
+	// @include mt;
 	z-index: -1;
 }
 
