--- a/sourse/pug/blocks/sCatalog/_sCatalog.scss
+++ b/sourse/pug/blocks/sCatalog/_sCatalog.scss
@@ -469,6 +469,10 @@
 		width: 100% !important;
 		height: rem(162) !important;
 		margin-bottom: rem(23) !important;
+		img{
+			max-height: 100%;
+			height: auto;
+		}
 	}
 	.prod-item__title{
 		font-size: rem(17);
