--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -9,6 +9,10 @@
 	font-size:(10/10)*1rem;
 	width:(14/10)*1em;
 }
+.icon-chevron-bot {
+	font-size:(9/10)*1rem;
+	width:(15/9)*1em;
+}
 .icon-chevron-down {
 	font-size:(8/10)*1rem;
 	width:(13/8)*1em;
@@ -20,6 +24,10 @@
 .icon-chevron-right {
 	font-size:(8/10)*1rem;
 	width:(6/8)*1em;
+}
+.icon-chevron-top {
+	font-size:(9/10)*1rem;
+	width:(15/9)*1em;
 }
 .icon-cross {
 	font-size:(8/10)*1rem;
@@ -40,6 +48,14 @@
 .icon-plus {
 	font-size:(16/10)*1rem;
 	width:(16/16)*1em;
+}
+.icon-sort-1 {
+	font-size:(18/10)*1rem;
+	width:(19/18)*1em;
+}
+.icon-sort-2 {
+	font-size:(18/10)*1rem;
+	width:(18/18)*1em;
 }
 .icon-sort-order {
 	font-size:(16/10)*1rem;
