--- a/sourse/pug/blocks/sCatalog/_sCatalog.scss
+++ b/sourse/pug/blocks/sCatalog/_sCatalog.scss
@@ -55,23 +55,7 @@
 		width: 100%;
 		height: 100%;
 		object-fit: cover;
-
-		&:after{
-			content: '';
-			position: absolute;
-
-			max-width: 100%;
-			width: calc(#{rem(471)} * 2);
-			height: calc(#{rem(319)} * 2);
-			border-radius: 50%;
-			bottom: calc(100% - 160px);
-
-			left: 55%;
-			transform: translateX(-50%);
-
-			background: radial-gradient(50% 50% at 50% 50%,rgba(203, 201, 202, 0.25) 0,rgba(203, 201, 202, 0) 100%);
-			filter: blur(5);
-		}
+		@extend .blured-ball-bg;
 	}
 
 	//
@@ -243,7 +227,7 @@
 	&__filter-btn{
 		@extend .btn;
 		@extend .btn-primary;
-		@extend .rm-btn-js;
+		@extend .rm-btn-js !optional;
 		font-weight: 600;
 
 		width: 100%;
@@ -281,6 +265,11 @@
 
 		font-size: rem(18);
 		color: $gray-550;
+
+		--bs-gutter-x: #{rem(20)};
+		@include media-breakpoint-up(xxl){
+			--bs-gutter-x: #{rem(40)};
+		}
 	}
 	&__f-txt{
 
@@ -314,8 +303,39 @@
 				transform: scale(1.25);
 			}
 		}
-
 	}
+	&__view-row{
+		--bs-gutter-x: #{rem(10)};
+	}
+	&__view-item{
+		@include mt();
+		cursor: pointer;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: rem(30);
+		height: rem(30);
+		padding: rem(3);
+
+		background: $white;
+		border: 1px solid $gray-110;
+
+		&:hover,
+		&.active{
+			background: $primary;
+			border: 1px solid $primary;
+			.icon{
+				color: $white;
+			}
+		}
+
+		.icon{
+			@include mt();
+			font-size: rem(18);
+			color: $black;
+		}
+	}
+	//
 	&__items-row{
 		padding-bottom: rem(40);
 		@include media-breakpoint-up(xxl){
@@ -799,4 +819,221 @@
 		margin-left: auto;
 		white-space: nowrap;
 	}
+}
+
+//
+.long-prod{
+	border: 1px solid $gray-110;
+	--col-px: #{rem(16)};
+	--col-py: #{rem(18)};
+	@include media-breakpoint-up(md){
+		--col-px: #{rem(20)};
+		--col-py: #{rem(20)};
+	}
+
+	&__col{
+		padding: var(--col-py) var(--col-px);
+
+		&--long{
+			position: relative;
+			border-right: 1px solid $gray-110;
+
+			@include media-breakpoint-up(xxl){
+				width: 66% !important;
+			}
+		}
+		&--gray{
+			background: $gray-120;
+		}
+	}
+	//actions
+	&__actions{
+		margin-bottom: calc(var(--col-py) / 2);
+		@include media-breakpoint-up(lg){
+			margin-bottom: 0;
+			position: absolute;
+			top: var(--col-py);
+			right: var(--col-px);
+		}
+	}
+	&__action{
+		width: rem(16);
+		height: rem(16);
+
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		img{
+			width: auto;
+			height: auto;
+			max-width: 100%;
+			max-height: 100%;
+		}
+	}
+	&__main-row{
+		--bs-gutter-x: #{rem(16)};
+		@include media-breakpoint-up(xl){
+			--bs-gutter-x: #{rem(20)};
+		}
+		@include media-breakpoint-up(xxl){
+			--bs-gutter-x: #{rem(51)};
+		}
+	}
+	&__img{
+		width: 100%;
+		height: rem(120);
+		@include media-breakpoint-up(sm){
+			width: rem(120);
+			height: rem(120);
+		}
+		@include media-breakpoint-up(lg){
+			width: rem(160);
+			height: rem(160);
+		}
+
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		img{
+			width: auto;
+			height: auto;
+			max-width: 100%;
+			max-height: 100%;
+		}
+	}
+	//taken
+	&__title{
+		display: block;
+		text-decoration: none;
+
+		@include media-breakpoint-up(lg){
+			padding-top: rem(32);
+		}
+		@include media-breakpoint-up(xxl){
+			padding-top: rem(48);
+		}
+		font-size: rem(17);
+		margin-bottom: rem(10);
+		line-height: (20/16);
+		color: $body-color;
+	}
+	&__chars{
+
+	}
+	&__char{
+		font-size: rem(14);
+		line-height: (21/14);
+	}
+	&__key{
+		color: $gray-585;
+		margin-right: rem(3);
+	}
+	&__val{}
+
+	//price-row
+	&__price-row{
+		padding-bottom: rem(10);
+
+	}
+	&__price{
+		&--old{
+			font-size: rem(12);
+			line-height: calc(17/12);
+			text-decoration-line: line-through;
+			color: $gray-550;
+		}
+		&--curr{
+			font-size: rem(17);
+			line-height: calc(25/17);
+		}
+	}
+	&__bonus-row{
+		--bs-gutter-x: #{rem(10)};
+		--bs-gutter-y: #{rem(10)};
+	}
+	&__b-txt-col{
+		font-size: rem(14);
+		line-height: 1.46;
+	}
+	&__b-blue{
+		color: $blue;
+	}
+	.sidebar__hint-ball{
+		background-color: $white;
+		&:hover{
+			background-color: $primary;
+		}
+		width: rem(18);
+		height: rem(18);
+		font-size: rem(12);
+	}
+
+	&__delivery-box{
+		margin-bottom: rem(31);
+	}
+	&__d-item{
+		margin-bottom: rem(5);
+	}
+	&__d-row{
+		font-size: rem(14);
+		line-height: calc(20/14);
+	}
+	&__d-key{
+		color: $primary;
+	}
+	&__d-val{
+		b{
+			font-weight: 600;
+		}
+	}
+	&__buy-btn{
+		@extend .btn;
+		@extend .btn-primary;
+
+		display: inline-flex;
+		align-items: center;
+
+		border-radius: rem(60);
+		padding: rem(8);
+
+		.icon{
+			stroke: $white;
+			font-size: rem(16);
+			margin-right: rem(12);
+		}
+
+		font-weight: 500;
+		font-size: rem(12);
+		line-height: 1;
+
+		letter-spacing: rem(0.1);
+		text-transform: uppercase;
+	}
+	&__credit{
+		text-decoration: none;
+		display: inline-flex;
+		align-items: center;
+
+		font-size: rem(14);
+		line-height: calc(20/14);
+		&:before{
+			content: '%';
+			flex-shrink: 0;
+			width: rem(20);
+			height: rem(20);
+
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			text-align: center;
+
+			margin-right: rem(10);
+			border-radius: 50%;
+			background-color: $danger;
+
+			color: $gray-110;
+			font-size: rem(12);
+		}
+	}
+	&__{}
 }
