--- a/sourse/pug/blocks/sProdCard/_sProdCard.scss
+++ b/sourse/pug/blocks/sProdCard/_sProdCard.scss
@@ -513,27 +513,8 @@
 	}
 	//
 	&__more{
-		display: flex;
-		align-items: center;
-		text-decoration: none;
+		@extend .plus-link;
 		margin-bottom: rem(63);
-
-		&:before{
-			content: '';
-			width: rem(16);
-			height: rem(16);
-			flex-shrink: 0;
-			margin-right: rem(12);
-
-			background-image: url(../img/svg/plus.svg);
-			background-size: cover;
-			background-repeat: no-repeat;
-		}
-
-		font-size: rem(12);
-		line-height: (18/12);
-		text-transform: uppercase;
-		color: $primary;
 	}
 	&__img{
 
