--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -36,6 +36,7 @@ $utilities: ("opacity": (
 $white: #fff !default;
 $gray-100: #f8f9fa !default;
 $gray-110: #ECECEC;
+$gray-115: #E2E2E2;
 $gray-120: #F3F3F3;
 $gray-130: #F7F7F7;
 $gray-200: #e9ecef !default;
