--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -38,6 +38,7 @@ $gray-100: #f8f9fa !default;
 $gray-110: #ECECEC;
 $gray-115: #E2E2E2;
 $gray-120: #F3F3F3;
+$gray-125: #F6F6F6;
 $gray-130: #F7F7F7;
 $gray-200: #e9ecef !default;
 $gray-280: #E8E8E8;
@@ -49,6 +50,7 @@ $gray-510: #C4C4C4;
 $gray-511: #B5B5B5;
 $gray-520: #BABABA;
 $gray-520: #ECECEC;
+$gray-525: #EAEBEE;
 $gray-530: #9B9B9B;
 $gray-540: #989898;
 $gray-550: #9C9C9C;
@@ -61,6 +63,7 @@ $gray-650: #747474;
 $gray-670: #717171;
 $gray-690: #9D9D9D;
 $gray-700: #495057 !default;
+$gray-710: #4D4D4D;
 $gray-720: #575757;
 $gray-800: #343a40 !default;
 $gray-830: #444444;
@@ -68,6 +71,7 @@ $gray-900: #262626 !default;
 $gray-910: #343232;
 $gray-910: #2C2C2C;
 $gray-920: #2a2a2a;
+$gray-990: #1B1A1A;
 $black: #000 !default;
 // scss-docs-end gray-color-variables
 
