--- a/sourse/pug/pages/layout/js-css.pug
+++ b/sourse/pug/pages/layout/js-css.pug
@@ -1,7 +1,7 @@
 mixin allcss()
 	//- link(rel="stylesheet", href="libs/Easy-Responsive-Tab-Accordion-Control-Plugin-For-jQuery/easy-responsive-tabs.css")
 	//- link(href="libs/swiper/css/swiper.min.css", rel="stylesheet") 
-	//- link(href="libs/@fancyapps/fancybox/jquery.fancybox.min.css", rel="stylesheet")
+	link(href="libs/@fancyapps/ui/fancybox.css", rel="stylesheet")
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
