--- a/sourse/pug/blocks/sCompare/_sCompare.pug
+++ b/sourse/pug/blocks/sCompare/_sCompare.pug
@@ -48,6 +48,7 @@ mixin sCompare(data)
 								.swiper-wrapper
 									-for(var i=1; i <= 7; i++)
 										+sCompareMainSlide({})
+								.swiper-scrollbar
 	// end sCompare
 
 mixin sCompareMainSlide(data)
