--- a/sourse/pug/blocks/sAbout/_sAbout.scss
+++ b/sourse/pug/blocks/sAbout/_sAbout.scss
@@ -59,6 +59,29 @@
 		padding: 14.5px 18px;
 		min-width: rem(217);
 	}
+	&__slider-wrap{
+		position: relative;
+
+		margin-bottom: rem(40);
+		@include media-breakpoint-up(xl){
+			margin-bottom: rem(79);
+		}
+	}
+	.swiper-prev,
+	.swiper-next{
+		@extend .ball-prev-next;
+		position: absolute;
+		z-index: 10;
+		top: 50%;
+		transform: translateY(-50%);
+	}
+	.swiper-prev{
+		right: calc(100% + 10px);
+	}
+	.swiper-next{
+		left: calc(100% + 10px);
+	}
+
 	&__img{
 		@extend .accept-ratio-frame-nh;
 
@@ -66,11 +89,6 @@
 		@include media-breakpoint-up(md){
 			padding-top: (496/1360) * 100%;
 			height: 0;
-		}
-
-		margin-bottom: rem(40);
-		@include media-breakpoint-up(xl){
-			margin-bottom: rem(79);
 		}
 	}
 	&__pills-row{
