--- a/sourse/pug/blocks/sCart/_sCart.scss
+++ b/sourse/pug/blocks/sCart/_sCart.scss
@@ -98,42 +98,22 @@
 			}
 		}
 	}
-	&__action-row{
+	//
+	.tags-row{
 		--bs-gutter-x: #{rem(26)};
-		--bs-gutter-y: #{rem(10)};
+		--bs-gutter-y: #{rem(8)};
 
-		padding-bottom: rem(28);
-	}
-	&__action{
-		display: flex;
-		align-items: center;
-
-		font-size: rem(18);
-		color: $gray-550;
-		text-decoration: none!important;
-	}
-	&__icon{
-		max-width: rem(16);
-		max-height: rem(16);
-		margin-right: rem(20);
-
-		display: flex;
-		align-items: center;
-		justify-content: center;
-
-		img{
-			width: auto;
-			height: auto;
-			max-width: 100%;
-			max-height: 100%;
+		&__tag{
+			color: $gray-550;
+		}
+		&__icon{
+			margin-right: rem(20);
 		}
 	}
+
+
 	//items
 	&__items{
-		//padding-bottom: rem(30);
-		//@include media-breakpoint-up(xxl){
-		//	padding-bottom: rem(50);
-		//}
 		padding-bottom: rem(20);
 		@include media-breakpoint-up(xxl){
 			padding-bottom: 3px;
@@ -485,7 +465,10 @@
 		}
 		&--new{
 			font-weight: 500;
-			font-size: rem(20);
+			font-size: rem(18);
+			@include media-breakpoint-up(base){
+				font-size: rem(20);
+			}
 			line-height: calc(29/20);
 			color: $black;
 		}
