--- a/sourse/pug/blocks/sCompare/_sCompare.scss
+++ b/sourse/pug/blocks/sCompare/_sCompare.scss
@@ -213,16 +213,49 @@
 
 	//-
 	&__main-slider{
+		position: relative;
 		& > .swiper-container{
 			@include media-breakpoint-down(lg){
 				overflow: visible!important;
 			}
 		}
+		.swiper-scrollbar{
+			@include media-breakpoint-down(lg){
+				display: none;
+			}
+
+			width: 100%;
+			height: 10px;
+			//background-color: red;
+			position: absolute;
+			z-index: 2;
+			top: calc(var(--comp-card-h) + #{rem(40)});
+			left: 0;
+			&:after{
+				content: '';
+				position: absolute;
+				z-index: -1;
+				top: 50%;
+				transform: translateY(-50%);
+				left: 0;
+				width: 100%;
+				height: 1px;
+				background-color: $primary;
+			}
+		}
+		//-
+		.swiper-scrollbar-drag{
+			cursor: pointer;
+			background: $primary;
+			border-radius: rem(20);
+			height: rem(10);
+		}
+
 	}
 
 	//
 	&__main-slide{
-		width: rem(300);
+		width: rem(230);
 		max-width: 100%;
 		@include media-breakpoint-up(sm){
 			width: calc(100%/2);
@@ -284,10 +317,14 @@
 	}
 
 	//--btn-img-o: 1;
+	@include mt();
 	&:hover{
 		--btn-img-o: 1;
-		--buy-btn-ml: #{rem(12)};
-		--buy-btn-w: #{rem(47)};
+		@include media-breakpoint-up(xl){
+			--buy-btn-ml: #{rem(12)};
+			--buy-btn-w: #{rem(47)};
+		}
+		box-shadow: 0px 4px 27px rgba(149, 149, 149, 0.1);
 	}
 
 	&__content{
