--- a/sourse/pug/pages/016-cart.pug
+++ b/sourse/pug/pages/016-cart.pug
@@ -8,6 +8,7 @@ include ../blocks/sCatalog/_sCatalog.pug
 include ../blocks/sCart/_sCart.pug
 include ../blocks/sBuyWith/_sBuyWith.pug
 include ../blocks/sNew/_sNew.pug
+include ../blocks/sProdCard/_sProdCard.pug
 include ../blocks/sPersonalCab/_sPersonalCab.pug
 
 block variables
