--- a/sourse/pug/blocks/sCatalog/_sCatalog.pug
+++ b/sourse/pug/blocks/sCatalog/_sCatalog.pug
@@ -10,17 +10,22 @@ mixin sCatalog(data)
 						+breadcrumb('Главная', 'Каталог', 'Крупная бытовая техника', 'Стиральные машины')
 					+b.section-title
 						h1!=data.title
-					+e.tags-row.row.sTags-row-js
-						-for(let i = 0; i < 2; i ++)
-							+sCatalogTag('Стиральные машины из Германии')
-							+sCatalogTag('Стиральные машины шириной 55 см')
-							+sCatalogTag('Узкие стиральные машины')
-							+sCatalogTag('Стиральные машины под раковину')
-							+sCatalogTag('Угловые стиральные машины')
-						.col-sm-auto.d-block
-							+e.btn--toggle.sTags-btn-js
-								span Показать еще
-								span Скрыть
+					.tags-slider-wrap
+						.swiper-container.tags-slider-js
+							.swiper-wrapper
+								.swiper-slide
+									+e.tags-row.row.sTags-row-js
+										-for(let i = 0; i < 2; i ++)
+											+sCatalogTag('Стиральные машины из Германии')
+											+sCatalogTag('Стиральные машины шириной 55 см')
+											+sCatalogTag('Узкие стиральные машины')
+											+sCatalogTag('Стиральные машины под раковину')
+											+sCatalogTag('Угловые стиральные машины')
+										.col-sm-auto.d-block
+											+e.btn--toggle.sTags-btn-js
+												span Показать еще
+												span Скрыть
+							.swiper-scrollbar.d-md-none.my-3
 					+e.img.d-none.d-lg-flex
 						img(loading="lazy" src="img/@2x/sCatalog-baner-img.png" alt="")
 		+e.content
@@ -46,7 +51,7 @@ mixin sCatalog(data)
 											span.icon-wrap
 												+icon('sort-order')
 							if data.hasAltView
-								.col-auto
+								.col-auto.d-none.d-md-block
 									+e.view-row.row
 										+sCatalogViewItem(1)
 										+sCatalogViewItem(2, 'active')
@@ -171,7 +176,7 @@ mixin longProdAction(imgNum)
 			img(loading="lazy" src=`img/svg/long-prod-action-${imgNum}.svg` alt="")
 
 mixin sCatalogTag(txt)
-	.col-sm-auto
+	.col-auto
 		+e.btn--tag(href="#")=txt
 
 mixin sCatalogTagOrange(txt)
