--- a/sourse/pug/blocks/sCompare/_sCompare.scss
+++ b/sourse/pug/blocks/sCompare/_sCompare.scss
@@ -230,33 +230,12 @@
 				display: none;
 			}
 
-			width: 100%;
-			height: 10px;
 			//background-color: red;
-			position: absolute;
+			position: absolute!important;
 			z-index: 2;
 			top: calc(var(--comp-card-h) + #{rem(40)});
 			left: 0;
-			&:after{
-				content: '';
-				position: absolute;
-				z-index: -1;
-				top: 50%;
-				transform: translateY(-50%);
-				left: 0;
-				width: 100%;
-				height: 1px;
-				background-color: $primary;
-			}
 		}
-		//-
-		.swiper-scrollbar-drag{
-			cursor: pointer;
-			background: $primary;
-			border-radius: rem(20);
-			height: rem(10);
-		}
-
 	}
 
 	//
