--- a/sourse/pug/blocks/modal/_modal.scss
+++ b/sourse/pug/blocks/modal/_modal.scss
@@ -192,6 +192,12 @@
 			opacity: 1;
 		}
 	}
+	input:checked +.square{
+		background-color: $primary;
+		&:after{
+			opacity: 1;
+		}
+	}
 
 	.circle{
 		flex-shrink: 0;
@@ -216,6 +222,35 @@
 			width: 100%;
 			height: 100%;
 			border-radius: inherit;
+		}
+	}
+	.square{
+		@include mt();
+		flex-shrink: 0;
+		width: rem(20);
+		height: rem(20);
+		margin-right: rem(16);
+
+		border: 1px solid $orange;
+		padding: rem(4);
+
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		&:after{
+			content: '';
+			@include mt();
+			opacity: 0;
+			display: block;
+			width: 100%;
+			height: 100%;
+			border-radius: inherit;
+
+			background-image: url(../img/svg/check-w.svg);
+			background-repeat: no-repeat;
+			background-position: center;
+			background-size: contain;
 		}
 	}
 
