--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -9,6 +9,10 @@
 	font-size:(10/10)*1rem;
 	width:(14/10)*1em;
 }
+.icon-check {
+	font-size:(17/10)*1rem;
+	width:(17/17)*1em;
+}
 .icon-chevron-bot {
 	font-size:(9/10)*1rem;
 	width:(15/9)*1em;
