--- a/sourse/pug/blocks/sFamiliar/_sFamiliar.pug
+++ b/sourse/pug/blocks/sFamiliar/_sFamiliar.pug
@@ -51,8 +51,10 @@ mixin sFamiliarSlide(imgNum)
 						.col
 							+e.price 69 990 руб.
 						.col-auto
-							+e.add-btn(href="#")
-								+icon('plus')
+							+e.btn-wrap
+								+e.add-btn(href="#").active
+									+icon('check')
+									+e.add-btn-toggle-text в корзине
 
 mixin sFamiliarSlideChar(key,val)
 	+e.char
