--- a/sourse/pug/blocks/sFamiliar/_sFamiliar.scss
+++ b/sourse/pug/blocks/sFamiliar/_sFamiliar.scss
@@ -305,23 +305,55 @@
 	&__price{
 
 	}
+	&__btn-wrap{
+		position: relative;
+		width: 28px;
+		height: 28px;
+	}
+		&__add-btn-toggle-text {
+			font-size: 12px;
+			text-transform: uppercase;
+			font-weight: 500;
+			color: #fff;
+			display: none;
+			transition: all 0.5s ease;
+			padding-left: 5px;
+		}
 	&__add-btn{
+		position: absolute;
+		// left: 0;
+		top: 0;
+		right: 0;
 		@extend .btn;
 		@extend .btn-primary;
 
 		width: rem(32);
 		height: rem(32);
-		border-radius: 50%;
+		border-radius: 100px;
 		padding: 0;
 
 		display: flex;
 		align-items: center;
 		justify-content: center;
+		&.active{
+			background: #00D649 !important;
+			border-color: #00D649 !important;
+		}
+		&:hover {
+			width: max-content;
+			padding: 0 8px;
+			transition: all 0.5s ease;
 
+			.prod-item__add-btn-toggle-text {
+				display: block;
+			}
+		}
 		.icon{
 			font-size: rem(16);
 			stroke: $white;
 			stroke-width: 1px;
+			fill: transparent;
 		}
+
 	}
 }
