--- a/sourse/pug/pages/layout/js-css.pug
+++ b/sourse/pug/pages/layout/js-css.pug
@@ -23,7 +23,7 @@ mixin allcjs()
 
 	script(src="libs/inputmask/inputmask.min.js")
 	script(src="libs/ion-rangeslider/js/ion.rangeSlider.min.js")
-	script(src="js/libs.js")
+	script(src="libs/scrollbooster/scrollbooster.min.js")
 	script(src="js/common.js")
 	//- cut text libs
 	//- script(src="libs/jquery.morelines.min.js")
