--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -31,6 +31,7 @@ mixin headerBlock()
 							|
 							br.d-none.d-md-block
 							| квартиры абсолютно бесплатно*
+				.swiper-pagination
 	// end headerBlock
 
 mixin headerBlockSlide(imgNum, btnTxt='Подробнее')
