--- a/sourse/pug/blocks/sFamiliar/_sFamiliar.pug
+++ b/sourse/pug/blocks/sFamiliar/_sFamiliar.pug
@@ -54,7 +54,9 @@ mixin sFamiliarSlide(imgNum)
 							+e.btn-wrap
 								+e.add-btn(href="#").active
 									+icon('check')
-									+e.add-btn-toggle-text в корзине
+									+e.add-btn-toggle-text
+										span в корзину
+										span в корзине
 
 mixin sFamiliarSlideChar(key,val)
 	+e.char
