--- a/sourse/pug/blocks/sFamiliar/_sFamiliar.scss
+++ b/sourse/pug/blocks/sFamiliar/_sFamiliar.scss
@@ -318,6 +318,11 @@
 			display: none;
 			transition: all 0.5s ease;
 			padding-left: 5px;
+			span{
+				&:nth-child(2){
+					display: none;
+				}
+			}
 		}
 	&__add-btn{
 		position: absolute;
@@ -346,6 +351,14 @@
 
 			.prod-item__add-btn-toggle-text {
 				display: block;
+				span{
+					&:nth-child(1){
+						display: none;
+					}
+					&:nth-child(2){
+						display: block;
+					}
+				}
 			}
 		}
 		.icon{
