--- a/sourse/pug/blocks/sFamiliar/_sFamiliar.pug
+++ b/sourse/pug/blocks/sFamiliar/_sFamiliar.pug
@@ -53,6 +53,7 @@ mixin sFamiliarSlide(imgNum)
 						.col-auto
 							+e.btn-wrap
 								+e.add-btn(href="#").active
+									+icon('plus')
 									+icon('check')
 									+e.add-btn-toggle-text
 										span в корзину
