--- a/sourse/pug/blocks/sFamiliar/_sFamiliar.scss
+++ b/sourse/pug/blocks/sFamiliar/_sFamiliar.scss
@@ -340,25 +340,44 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
+	 
+		.icon:nth-child(2) {
+			display: none;
+		}
 		&.active{
 			background: #00D649 !important;
 			border-color: #00D649 !important;
+				.icon {
+					&:nth-child(1) {
+						display: none;
+					}
+
+					&:nth-child(2) {
+						display: block;
+					}
+				}
+					.prod-item__add-btn-toggle-text { 
+
+						span {
+							&:nth-child(1) {
+								display: none;
+							}
+
+							&:nth-child(2) {
+								display: block;
+							}
+						}
+					}
 		}
+
 		&:hover {
 			width: max-content;
 			padding: 0 8px;
 			transition: all 0.5s ease;
-
+		
 			.prod-item__add-btn-toggle-text {
-				display: block;
-				span{
-					&:nth-child(1){
-						display: none;
-					}
-					&:nth-child(2){
-						display: block;
-					}
-				}
+				display: block; 
+ 
 			}
 		}
 		.icon{
