--- a/sourse/pug/blocks/sCatalog/_sCatalog.pug
+++ b/sourse/pug/blocks/sCatalog/_sCatalog.pug
@@ -187,7 +187,7 @@ mixin sCatalogTag(txt)
 		+e.btn--tag(href="#")=txt
 
 mixin sCatalogTagOrange(txt)
-	.col-sm-auto
+	.col-auto
 		+e.btn--orange-tag(href="#")=txt
 
 mixin sCatalogSidebar()
