--- a/sourse/pug/blocks/sFamiliar/_sFamiliar.pug
+++ b/sourse/pug/blocks/sFamiliar/_sFamiliar.pug
@@ -38,7 +38,7 @@ mixin sFamiliarSlide(imgNum)
 	.swiper-slide
 		+b.prod-item
 			+e.row.row.align-items-center
-				.col-auto
+				.col-xxl-auto
 					+e.img(href="#")
 						img(loading="lazy" src=`img/@2x/sFamiliar-${imgNum}.png` alt="")
 				.col
