--- a/sourse/pug/blocks/sFamiliar/_sFamiliar.scss
+++ b/sourse/pug/blocks/sFamiliar/_sFamiliar.scss
@@ -43,7 +43,13 @@
 		background-color: transparent;
 		.sFamiliar__slider-wrap{
 			@include media-breakpoint-up(xl){
-				clip-path: polygon(33.33% 50%, 33.33% 0, 100% 0, 100% 100%, 0 100%, 0 50%);
+				// clip-path: polygon(33.33% 50%, 33.33% 0, 100% 0, 100% 100%, 0 100%, 0 50%);
+			}
+		}
+			@include media-breakpoint-up(xl){
+
+			.swiper-slide-active{
+				opacity: 0;
 			}
 		}
 	}
@@ -66,7 +72,11 @@
 
 		&--alt{
 			//height: calc(100%);
-			height: rem(496);
+			@include media-breakpoint-up(xxl){
+
+				height: rem(496);
+			}
+			height: rem(696);
 			max-height: 76%;
 		}
 	}
@@ -154,8 +164,8 @@
 		}
 
 		@include media-breakpoint-up(md){
-			border-top: 1px solid $gray-280;
-			border-left: 1px solid $gray-280;
+			// border-top: 1px solid $gray-280;
+			// border-left: 1px solid $gray-280;
 		}
 	}
 
@@ -173,6 +183,7 @@
 		// 	}
 		// }
 	}
+	
 } // end.sFamiliar
 
 .prod-item{
@@ -183,14 +194,38 @@
 			height: auto;
 		}
 
-	position: relative;
+		@include media-breakpoint-up(xxl){
+			display: block;
+		}
+		position: relative;
+		display: flex;
+		flex-direction: column;
+		&__row{
+			flex-grow: 1;
+			@include media-breakpoint-down(xxl){
+				align-items: baseline !important;
+				min-height: 100%;
+				flex-direction: column;
+				.col{
+					// flex: auto auto auto;
+					margin-top: 1rem;
+					flex-grow: 1;
+					display: flex;
+					flex-direction: column;
+				}
+				.prod-item__foot-row{
+					margin-top: auto;
+				}
+			}
+	}
 	@include media-breakpoint-down(md){
 		border: 1px solid $gray-280;
 		border-right: none;
 	}
 	@include media-breakpoint-up(md){
-		border-right: 1px solid $gray-280;
-		border-bottom: 1px solid $gray-280;
+		border: 1px solid $gray-280; 
+		margin-right: -1px;
+		margin-top: -1px;
 	}
 
 	padding: rem(24) rem(16) rem(30);
@@ -248,31 +283,36 @@
 	//
 
 	&__row{
-		--bs-gutter-y: #{rem(20)};
+		// --bs-gutter-y: #{rem(20)};
 
-		--bs-gutter-x: #{rem(16)};
-		@include media-breakpoint-up(xl){
-			--bs-gutter-x: #{rem(20)};
-		}
+		// --bs-gutter-x: #{rem(16)};
+		// @include media-breakpoint-up(xl){
+		// 	--bs-gutter-x: #{rem(20)};
+		// }
 		@include media-breakpoint-up(xxl){
 			--bs-gutter-x: #{rem(29)};
 		}
 
-		flex-wrap: nowrap;
+		// flex-wrap: nowrap;
 	}
 	&__img{
-		width: rem(120);
-		@include media-breakpoint-up(xl){
+		// width: rem(120);
+		text-align: center;
+		@include media-breakpoint-up(xxl){
 			width: rem(138);
 		}
-
+		
 		display: flex;
 		align-items: center;
 		justify-content: center;
-
+		
 		img{
 			width: auto;
 			max-width: 100%;
+			@include media-breakpoint-up(xxl){
+			max-height: 250px;
+		}
+		max-height: 200px;
 		}
 	}
 	&__title{
