--- a/sourse/pug/blocks/sFamiliar/_sFamiliar.scss
+++ b/sourse/pug/blocks/sFamiliar/_sFamiliar.scss
@@ -204,6 +204,20 @@
 		}
 		min-height: 200px;
 	}
+	.prod-item{
+	min-height: 100%;
+	background-color: $white;
+	&:hover{
+		--op: 1;
+		img{
+			opacity: 0;
+		}
+	}
+		@include media-breakpoint-up(md){ 
+		margin-right: -1px;
+		// margin-top: -1px;
+	}
+	}
 	
 } // end.sFamiliar
 
@@ -213,7 +227,7 @@
 	&:hover{
 		--op: 1;
 		img{
-			opacity: 0;
+			// opacity: 0;
 		}
 	}
 	
@@ -261,9 +275,7 @@
 		border-right: none;
 	}
 	@include media-breakpoint-up(md){
-		border: 1px solid $gray-280; 
-		margin-right: -1px;
-		margin-top: -1px;
+		border: 1px solid $gray-280;  
 	}
 
 	padding: rem(24) rem(16) rem(30);
