--- a/sourse/pug/blocks/sCatalog/_sCatalog.scss
+++ b/sourse/pug/blocks/sCatalog/_sCatalog.scss
@@ -809,14 +809,10 @@
 
 	display: flex!important;
 	align-items: center;
-	input:checked + .square{
-		border: 1px solid $primary;
-		background-color: $primary;
-		&:after{
-			opacity: 1;
-		}
-	}
+
 	.square{
+		background-color: var(--bg, transparent);
+
 		flex-shrink: 0;
 		@include mt();
 		border: 1px solid $gray-520;
@@ -841,10 +837,19 @@
 			width: 100%;
 			height: 100%;
 
-			background-image: url(../img/svg/check-2.svg);
+			background-image: var(--bg, url(../img/svg/check-2.svg));
 			background-repeat: no-repeat;
 			background-position: center;
 			background-size: contain;
+		}
+	}
+
+		input:checked + .square{
+		border: 1px solid var(--bg, #{$primary});
+		background-color: var(--bg, #{$primary});
+		box-shadow: 0px 0px 0px 2px #f7f7f7, 0px 0px 0px 4px var(--bg);
+		&:after{
+			opacity: 1;
 		}
 	}
 
